# PP

./: README.md
PR/Pr02/02 Invariant/: CMakeLists.txt  Power.cpp  Power.h  mod.cpp  mod.h
PR/Pr03/: CMakeLists.txt  main.cpp
PR/Pr03/01 Size/: CMakeLists.txt  Size.h  main.cpp
PR/Pr03/02 Precision/: CMakeLists.txt  Precision.cpp  main.cpp
PR/Pr03/03 Signed/: CMakeLists.txt  main.cpp
PR/Pr03/04 Shift/: CMakeLists.txt  Shift.cpp  Shift.h  main.cpp
PR/Pr03/05 Unexpect/: CMakeLists.txt  CMakePresets.json  exp.cpp  exp.h  main.cpp
PR/Pr04/: CMakeLists.txt  Literals.h  main.cpp  out.txt
PR/Pr05/01 Pointers/: CMakeLists.txt  main.cpp
PR/Pr05/02_Characters/: CMakeLists.txt  Char.cpp  Char.h  Tasks 08.doc  main.cpp
PR/Pr05/03 Arithm/: CMakeLists.txt  main.cpp
PR/Pr06/Array2/: Array2.cpp  Array2.h  CMakeLists.txt  main.cpp
PR/Pr06/Array22/: CMakeLists.txt  main.cpp
PR/Pr07/: 8.docx
PR/Pr07/08 Structures/: CMakeLists.txt  Structure.h  main.cpp
PR/Pr08/Function/: CMakeLists.txt  Complex.cpp  Complex.h  functions.cpp  functions.h  main.cpp
PR/Pr08/Lambda/: CMakeLists.txt  main.cpp
PR/Pr09/Parameters/: CMakeLists.txt  Complex.h  Parameters.cpp  Parameters.h  main.cpp
PR/Pr10/Menu/: CMakeLists.txt  Operator.h  main.cpp
PR/Pr11/: M(a,b).docx
PR/Pr11/Arithm/: CMakeLists.txt  Mult.h  Precision.h  main.cpp  series.h
PR/Pr11/Bits/: Bits.h  (+2 more)
PR/Pr12/: Array.h  C.h  CMakeLists.txt  Lambda.h  Overload.h  Parameter.h  Struct.h  Swap.h  main.cpp
PR/Pr13/Module/: CMakeLists.txt  Class.cpp  Class.ixx  main.cpp  math.cpp  math.ixx
docs/: install-tools.md
(+42 files in other folders)
